--- a/public/404.html
+++ b/public/404.html
@@ -79,7 +79,7 @@
         
 
         <li class="nav-item">
-          <a href="/#about">
+          <a href="/home/">
             
             <span>Home</span>
           </a>
